tests/parser_cases/valid/qualified_exports.ob0
MODULE Main;
IMPORT B := ModuleB;
TYPE
  LocalType* = B.IntType;
VAR x: INTEGER;
BEGIN
  B.HELLO;
  x := B.value
END Main.
