tests/parser_cases/invalid/qualified_member_missing_name.ob0
(* INVALID: missing member name after qualified access dot *)
MODULE Main;
IMPORT B := ModuleB;
BEGIN
  B.
END Main.
